--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>hk2-locator</artifactId>
 	    <version>${hk2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+        </dependency>
 
         <!-- uncomment this to get JSON support:
          <dependency>
@@ -99,8 +103,8 @@
     </build>
 
     <properties>
-        <jersey.version>2.25.1</jersey.version>
-	<hk2.version>2.5.0-b32</hk2.version>
+        <jersey.version>2.28</jersey.version>
+	<hk2.version>2.5.0</hk2.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
